Character.valueOf( instead of new Character