@@ -13,7 +13,7 @@ public class PR1StackTest {
 
     private void fillStack() {
         for (char c = '0'; c < '9'; c++) {
-            pr1q.push(Character.valueOf(c));
+            pr1q.push(c);
         }
     }
 
@@ -36,15 +36,16 @@ public class PR1StackTest {
     public void stackTest() {
 
         assertEquals(this.pr1q.CAPACITY-1, this.pr1q.getStack().size());
-        Assert.assertEquals(new Character('8'), pr1q.pop());
-        Assert.assertEquals(new Character('7'), pr1q.pop());
-        Assert.assertEquals(new Character('6'), pr1q.pop());
-        Assert.assertEquals(new Character('5'), pr1q.pop());
-        Assert.assertEquals(new Character('4'), pr1q.pop());
-        Assert.assertEquals(new Character('3'), pr1q.pop());
-        Assert.assertEquals(new Character('2'), pr1q.pop());
-        Assert.assertEquals(new Character('1'), pr1q.pop());
-        Assert.assertEquals(new Character('0'), pr1q.pop());
+
+        Assert.assertEquals(Character.valueOf('8'), pr1q.pop());
+        Assert.assertEquals(Character.valueOf('7'), pr1q.pop());
+        Assert.assertEquals(Character.valueOf('6'), pr1q.pop());
+        Assert.assertEquals(Character.valueOf('5'), pr1q.pop());
+        Assert.assertEquals(Character.valueOf('4'), pr1q.pop());
+        Assert.assertEquals(Character.valueOf('3'), pr1q.pop());
+        Assert.assertEquals(Character.valueOf('2'), pr1q.pop());
+        Assert.assertEquals(Character.valueOf('1'), pr1q.pop());
+        Assert.assertEquals(Character.valueOf('0'), pr1q.pop());
         assertEquals(0, this.pr1q.getStack().size());
     }
 }
